[gd_scene load_steps=27 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/06.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/11.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/05.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/04.png" type="Texture" id=8]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/10.png" type="Texture" id=9]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/07.png" type="Texture" id=11]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/01.png" type="Texture" id=13]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/08.png" type="Texture" id=15]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/09.png" type="Texture" id=20]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/02.png" type="Texture" id=21]
[ext_resource path="res://assets/characters/DemonGirl/demon/demon_attack_s/03.png" type="Texture" id=25]
[ext_resource path="res://assets/characters/jack/jack-idle.png" type="Texture" id=26]
[ext_resource path="res://assets/characters/jack/jack-walk.png" type="Texture" id=27]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 26 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 26 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 26 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 26 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 27 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 27 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": false,
"name": "attack",
"speed": 14.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=10]
resource_name = "Damaged"
length = 0.2
step = 0.005
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.005, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Invulnerable"
length = 0.8
step = 0.005
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.005, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 9 )
animation = "idle"

[node name="SlowAttackArea" type="Area2D" parent="AnimatedSprite"]
monitoring = false
monitorable = false
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/SlowAttackArea"]
position = Vector2( -28, 8 )
shape = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damaged = SubResource( 10 )
anims/Invulnerable = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 4.0

[node name="Timers" type="Node" parent="."]

[node name="WallJumpTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="Timers"]
wait_time = 0.7
one_shot = true

[node name="DoubleJumpTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="WallTouchTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="SlowAttackTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="SlowAttackTimeoutTimer" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="AnimatedSprite/SlowAttackArea" to="." method="_on_SlowAttackArea_body_entered"]
[connection signal="timeout" from="Timers/SlowAttackTimer" to="." method="_on_SlowAttackTimer_timeout"]
[connection signal="timeout" from="Timers/SlowAttackTimeoutTimer" to="." method="_on_SlowAttackTimeout_timeout"]
